Fix SimpleControllerTest search tests
- Update tests to match actual implementation (uses getAllProducts)
- Add test for empty keyword
- Fix assertions for search results
- Verify correct method calls